Fixed alert sizing - no more form jumping.

--- a/wsgi/openshift/verifier/static/verifier/verify.css
+++ b/wsgi/openshift/verifier/static/verifier/verify.css
@@ -3,8 +3,10 @@
 /*}*/
 
 .usercheck_alert {
-    /*display: block;*/
-    margin-top: auto;
     display: inline-block;
+    height: 100%;
     vertical-align: middle;
+    padding: 12px;
+    margin-top: auto;
+    margin-bottom: auto;
 }
